# LuaTest

./: CMakeLists.txt
LuaTest/: CMakeLists.txt  LuaTest.cpp  script.lua  script.out
